# audioengine

./: .gitignore  CMakeLists.txt  README.md
src/: Arpeggiator.cpp  Arpeggiator.h  AudioPlayer.cpp  AudioPlayer.h  Oscillator.cpp  Oscillator.h  main.cpp
src/core/: Arpeggiator.cpp  Arpeggiator.h  Envelope.cpp  Envelope.h  Notes.h  Oscillator.cpp  Oscillator.h
src/effects/: AudioEffect.h  Delay.cpp  Delay.h  EffectChain.h  HardClipping.cpp  HardClipping.h  HighPassFilter.cpp  HighPassFilter.h  IEffectChain.h  LowPassFilter.cpp  LowPassFilter.h  Reverb.cpp  Reverb.h  SoftClipping.cpp  SoftClipping.h
src/midi/: Header.cpp  Header.h  MidiNote.h  MidiValues.cpp  MidiValues.h  Read.cpp  Read.h  TrackHeader.cpp  TrackHeader.h  VLQ.cpp  VLQ.h
src/player/: AudioPlayer.cpp  AudioPlayer.h
